# meteofranceapi

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/developer_guide/: branches_and_CD.doctree  contributing.doctree  contributing_to_docs.doctree  testing.doctree
.doctrees/examples/: arome.doctree  arpege.doctree  index.doctree
.doctrees/getting_started/: how_to.doctree  index.doctree  install.doctree  intro.doctree  tutorials.doctree
.doctrees/nbsphinx/getting_started/: how_to.ipynb  intro.ipynb
.doctrees/sources/: meteofrance_publicapi.arome.doctree  meteofrance_publicapi.const.doctree  meteofrance_publicapi.core.doctree  meteofrance_publicapi.doctree  meteofrance_publicapi.errors.doctree  meteofrance_publicapi.observations.doctree  meteofrance_publicapi.raster.doctree  meteofrance_publicapi.tests.doctree
.doctrees/user_guide/: index.doctree
.github/workflows/: build-doc.yml  python-test.yml
_modules/: index.html
_modules/meteofrance_publicapi/: core.html  errors.html  observations.html  raster.html
_sources/: index.rst.txt
_sources/developer_guide/: contributing.rst.txt  contributing_to_docs.rst.txt  testing.rst.txt
_sources/examples/: index.rst.txt
_sources/getting_started/: install.rst.txt  tutorials.rst.txt
_sources/sources/: meteofrance_publicapi.const.rst.txt  meteofrance_publicapi.core.rst.txt  meteofrance_publicapi.raster.rst.txt  meteofrance_publicapi.rst.txt
_sources/user_guide/: index.rst.txt
developer_guide/: branches_and_CD.html  contributing.html  contributing_to_docs.html  testing.html
doc/: conf.py  index.rst  meteofrance_publicapi.errors.rst  meteofrance_publicapi.rst
doc/developer_guide/: branches_and_CD.rst  contributing.rst  testing.rst
doc/examples/: arome.ipynb  arpege.ipynb  index.rst
doc/getting_started/: how_to.ipynb  index.rst  intro.ipynb
doc/sources/: meteofrance_publicapi.arome.rst  meteofrance_publicapi.observations.rst  meteofrance_publicapi.rst  meteofrance_publicapi.tests.rst
doc/user_guide/: index.rst
examples/: arome.html  arome.ipynb  arpege.html  index.html
getting_started/: how_to.html  index.html  install.html  intro.html  tutorials.html
meteofrance_publicapi/: __init__.py  arome.py  const.py  core.py  errors.py  forecast.py  observations.py  raster.py
meteofrance_publicapi/tests/: test_import.py
meteofranceapi/: core.py  meteofranceapi.py  observations.py
sources/: meteofrance_publicapi.arome.html  meteofrance_publicapi.const.html  meteofrance_publicapi.core.html  meteofrance_publicapi.errors.html  meteofrance_publicapi.html  meteofrance_publicapi.observations.html  meteofrance_publicapi.raster.html  meteofrance_publicapi.tests.html
user_guide/: index.html
